# factcheck-editor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
code/claim_detection/: claim_detection.py
code/llm_utils/: mistral.yaml  ollama.py  openai_utils.py
code/prompts/: prompts.py
code/utils/: lang_codes.json  utils.py
code/veracity/: llm_nli.py  nli_eval.py  nli_plots.py  veracity_prediction.py
data/: README.md  claim_detection_f1_scores.tsv
data/claim_detection/: af_test.jsonl  af_test_pred.jsonl  ak_test.jsonl  ak_test_pred copy.jsonl  ak_test_pred.jsonl  am_test.jsonl  am_test_pred.jsonl  ar_test.jsonl  ar_test_pred.jsonl  as_test.jsonl  as_test_pred.jsonl  ay_test.jsonl  ay_test_pred.jsonl  az_test.jsonl  az_test_pred.jsonl  be_test.jsonl  be_test_pred.jsonl  bg_test.jsonl  bg_test_pred.jsonl  bm_test.jsonl  bm_test_pred.jsonl  bn_test.jsonl  bn_test_pred.jsonl  br_test.jsonl  br_test_pred.jsonl  bs_test.jsonl  bs_test_pred.jsonl  ca_test.jsonl  ca_test_pred.jsonl  claim_detection_f1_scores.tsv  claim_detection_f1_scores_macro.tsv  claim_detection_f1_scores_micro.tsv  co_test.jsonl  co_test_pred.jsonl  cs_test.jsonl  cs_test_pred.jsonl  cy_test.jsonl  cy_test_pred.jsonl  da_test.jsonl  da_test_pred.jsonl  (+210 more)
data/veracity_prediction/: af_test_local_pred.json  ak_test.json  ak_test_local_pred.json  am_test.json  am_test_local_pred.json  ar_test.json  ar_test_local_pred.json  as_test.json  as_test_local_pred.json  ay_test.json  (+86 more)
scripts/: README.md  claim_detection_aggr.py  claim_detection_heatmap.py  claim_detection_plots.py  retrieval_plot.py  translate_data.py  translate_nllb.py  veracity_plots.py  veracity_plots_low_resource.py
src/: relevance_labelling.py
(+275 files in other folders)
