[project]
name = "factcheck_editor"
version = "0.1.0"
description = "Prediction using MTL LLM"
requires-python = ">=3.11"
dependencies = [
    "attrs>=22.2.0",
    "black>=23.1.0",
    "certifi",
    "cfgv>=3.3.1",
    "click>=8.1.3",
    "distlib>=0.3.6",
    "exceptiongroup>=1.1.0",
    "filelock>=3.9.0",
    "identify>=2.5.18",
    "iniconfig>=2.0.0",
    "mypy>=1.0.1",
    "mypy-extensions>=1.0.0",
    "nodeenv>=1.7.0",
    "packaging>=23.0",
    "pathspec>=0.11.0",
    "platformdirs>=3.0.0",
    "pluggy>=1.0.0",
    "pre-commit>=3.1.0",
    "pytest>=7.2.1",
    "python-dotenv>=0.21.1",
    "PyYAML>=6.0",
    "ruff>=0.0.252",
    "tomli>=2.0.1",
    "typing_extensions>=4.12.2",
    "virtualenv>=20.19.0",
    "scikit-learn",
    "wandb>=0.19.9",
    "datasets>=3.0.0",
    "bitsandbytes>=0.43.2",
    "accelerate>=1.3.0",
    "unsloth>=2024.8",
    "flake8>=7.1.1",
    "docformatter>=1.7.5",
    "pydocstyle>=6.3.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.30.0",
    "fire>=0.5.0",
    "pandas>=2.2.0",
    "peft>=0.8.2",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.3",
    "transformers",
    "trl>=0.16.0",
    "numpy",
    "scipy>=1.13.1",
    "seaborn",
    "matplotlib",
    "transformer-heads @ file:///${PROJECT_ROOT}/mtl_cls_inference/transformer-heads-lib",
    "openai>=2.15.0",
    "deep_translator>=1.11.4",
    "ollama",
    "python-dotenv",
    "scikit-learn",
    "anthropic",
    "numba",
    "sentence_transformers"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"